cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zq2-stake
  labels:
    app.kubernetes.io/name: zq2-stake-frontend
