cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zq2-stake-frontend
  namespace: zq2-stake
  labels:
    app.kubernetes.io/name: zq2-stake-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zq2-stake-frontend
